dude im a fucking ididot

--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -9,7 +9,7 @@
             const compimg = document.getElementById("computerimg");
             const diskbutton = document.getElementById("diskbutton");
 
-            if (yeah){
+            if (!yeah){
                 compimg.setAttribute("src","assets/computer.png")
                 diskbutton.remove()
             } else {
