--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -20,7 +20,7 @@
     </script>
 </head>
 
-<body onload="whenLoaded();checkDisk(checkPassword())">
+<body onload="whenLoaded();checkDisk(await checkPassword())">
     THE DESK
     <div class="imgcontainer">
         <a href="computer.html" style="width: 250px; height: 200px; position: absolute; transform: translate(10px,0px);"></a>
