maya file + maze

--- a/FBAR/files.html
+++ b/FBAR/files.html
@@ -29,7 +29,7 @@
     </div>
 
     <div id="file2" class="imgcontainer" style="display: none;">
-        <img id="coverimage" class="fileimage" src="assets/file/paperPH.png" style="max-width: 600px;">
+        <img id="coverimage" class="fileimage" src="assets/file/MAYA1.png" style="max-width: 600px;">
     </div>
 
     <button id="outOfFile" class="linkback" onclick="showFile(false)" style="display: none;">↓</button>
