--- a/FBAR/files.html
+++ b/FBAR/files.html
@@ -29,7 +29,12 @@
     </div>
 
     <div id="file2" class="imgcontainer" style="display: none;">
-        <img id="coverimage" class="fileimage" src="assets/file/MAYA1.png" style="max-width: 600px;">
+        <img id="page1" class="fileimage" src="assets/file/MAYA1.png" style="max-width: 600px;">
+        <a id="page2" class="fileimage" href="https://youtu.be/xD8I2SDqFHQ?si=94aQ-dalG97Mezaf" style="min-width: 700px; min-height: 800px;"><img src="assets/file/MAYA2.png" style="max-width: 700px;"></a>
+        <div class="horizontalcont" style="width: 1000px;">
+            <button class="leftkey">←</button>
+            <button class="rightkey">→</button>
+        </div>
     </div>
 
     <button id="outOfFile" class="linkback" onclick="showFile(false)" style="display: none;">↓</button>
