--- a/FBAR/main.html
+++ b/FBAR/main.html
@@ -11,6 +11,7 @@
     <div class="imgcontainer">
         <a href="door.html" style="width: 50px; height: 120px; position: absolute; transform: translate(0px,-50px);"></a>
         <a href="desk.html" style="width: 100px; height: 120px; position: absolute; transform: translate(360px,0px);"></a>
+        <a href="credits.html" style="width: 100px; height: 60px; position: absolute; transform: translate(-150px,-50px);"></a>
         <img class="bigimage" src="assets/office.png">
     </div>
     <audio id="musicPlayer" preload="auto" autoplay="autoplay">
