--- a/smp/main.html
+++ b/smp/main.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="imgcontainer">
-        <img class="bigimage" src="000.png">
+        <img class="bigimage" src="">
     </div>
 
     <input id="passwordinput" type="text" maxlength="20" style="width: 200px;">
