--- a/wizardfella/index.html
+++ b/wizardfella/index.html
@@ -3,10 +3,35 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/star.png">
     <title>Wizard Fella Islands</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1.1">
   </head>
   <body>
-    <h1>Hello world and what is up!</h1>
+    <a href="index.html"><center><img class="logo" src="assets/logo.png" alt="Wizard fella logo" width="300px"></center></a>
+    <section>
+        <p>Welcome to the Wizard Fella website</p>
+        <p>A home to the monthly newsletter and some other posts</p>
+    </section>
+    <p></p>
+    <section class="nobg">
+        <h1>~ ----------------------------------- ~</h1>
+    </section>
+    <p></p>
+    <a href="issue1.html">
+        <section class="blue">
+            <h1>NEWSLETTER : ISSUE 1</h1>
+            <p class="smalltext">January 31st, 2026</p>
+        </section>
+    </a>
+    <p></p>
+    <section class="blue">
+        <h1>What is Wizard Fella?</h1>
+        <p class="smalltext">January 31st, 2026</p>
+    </section>
+    <p></p>
+    <section class="nobg">
+        <h1>~ ----------------------------------- ~</h1>
+    </section>
   </body>
 </html>
