ok now its done

--- a/wizardfella/index.html
+++ b/wizardfella/index.html
@@ -25,10 +25,12 @@
         </section>
     </a>
     <p></p>
-    <section class="blue">
-        <h1>What is Wizard Fella?</h1>
-        <p class="smalltext">January 31st, 2026</p>
-    </section>
+    <a href="whatis.html">
+        <section class="blue">
+            <h1>WHAT IS WIZARD FELLA?</h1>
+            <p class="smalltext">January 31st, 2026</p>
+        </section>
+    </a>
     <p></p>
     <section class="nobg">
         <h1>~ ----------------------------------- ~</h1>
