--- a/wizardfella/issue1.html
+++ b/wizardfella/issue1.html
@@ -147,7 +147,7 @@
     <section>
         <p>I hope you found some of this interesting and I hope to share even cooler stuff with you next month</p>
         <p>Thank you for reading and until next time!!!</p>
-        <p class="smalltext">PS: I also have a post below this one explaining what Wizard Fella Islands is, so you can read that if you wish to.</p>
+        <p class="smalltext">PS: I also have a post below this one explaining what Wizard Fella is, so you can read that if you wish to.</p>
     </section>
     <p class="secret"><p>ok here's some music that will be used in the second part of the tutorial</p><p class="smalltext">unless i decide to change it which is possible but hopefully not</p><audio src="assets/issue1/CloudyComplete.mp3" controls="true"></audio></p>
 </body>
