changed the image styles

--- a/wizardfella/issue1.html
+++ b/wizardfella/issue1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Issue</title>
-    <link rel="stylesheet" href="style.css?v=1.1">
+    <link rel="stylesheet" href="style.css?v=1.2">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/star.png">
 
     <meta content="Issue 1" property="og:title">
@@ -23,7 +23,7 @@
     <section class="leftalign">
         <p>Big Dreams is the first island in the game and also acts as a tutorial. Guided by the Star Messenger you will learn the movement of the game. This month I worked on the first part by making the level and writing the tutorial dialogue.</p>
     </section>
-    <p><img src="assets/issue1/bigdreams.png" alt="Screenshot of big dreams" width="500px" class="borderimg"></p>
+    <p><img src="assets/issue1/bigdreams.png" alt="Screenshot of big dreams" class="borderimg"></p>
     <p class="smalltext">Image of Big Dreams</p>
     <section class="leftalign">
         <p>
@@ -39,14 +39,14 @@
             The thingies are random collectable items you will find at the end of every island. This is something that would've been a big part of the original Wizard Fella, so I decided to bring them back.
         </p>
     </section>
-    <p><img src="assets/issue1/Thingies.png" alt="Image of picking up the Star Wand" width="500px" class="borderimg"></p>
+    <p><img src="assets/issue1/Thingies.png" alt="Image of picking up the Star Wand" class="borderimg"></p>
     <p class="smalltext">Image of picking up the Star Wand</p>
     <section class="leftalign">
         <p>
             So far there is no save system and no way to view what thingies you have which is why I want to work on the diary next month.
         </p>
     </section>
-    <p><img src="assets/issue1/diaryconcept.png" alt="Idea for how the diary could look like" width="500px"></p>
+    <p><img src="assets/issue1/diaryconcept.png" alt="Idea for how the diary could look like" class="noborderimg"></p>
     <p class="smalltext">Idea for how the diary could look like</p>
     <section class="leftalign">
         <p>
@@ -62,7 +62,7 @@
             If you jump into it you can rotate it using A/D keys and then charge using the Space key.
         </p>
     </section>
-    <p><img src="assets/issue1/cannongif.gif" alt="GIF of showing off the cannon" width="500px" class="borderimg"></p>
+    <p><img src="assets/issue1/cannongif.gif" alt="GIF of showing off the cannon" class="borderimg"></p>
     <p class="smalltext">Cannons in action</p>
     <section class="leftalign">
         <p>
@@ -83,14 +83,14 @@
             If it's set to falling, then it will fall after you stand on it for a few seconds.
         </p>
     </section>
-    <p><img src="assets/issue1/fall.gif" alt="GIF of Marble blocks falling" width="500px" class="borderimg"></p>
+    <p><img src="assets/issue1/fall.gif" alt="GIF of Marble blocks falling" class="borderimg"></p>
     <p class="smalltext">Marble blocks falling</p>
     <section class="leftalign">
         <p>
             If it's set to breakable, then it will break apart into pieces if you smash into it with a pound.
         </p>
     </section>
-    <p><img src="assets/issue1/break.gif" alt="GIF of Marble blocks breaking" width="500px" class="borderimg"></p>
+    <p><img src="assets/issue1/break.gif" alt="GIF of Marble blocks breaking" class="borderimg"></p>
     <p class="smalltext">Marble blocks breaking</p>
 
     <h1 class="rotatedText2">MINOR CHANGES</h1>
@@ -101,7 +101,7 @@
             I worked on adding BBCode to the dialogue, which basically means I can give some parts of the text a cool effect.
         </p>
     </section>
-    <p><img src="assets/issue1/BBCode.png" alt="image of color BBCode Effect" height="300px" class="borderimg"></p>
+    <p><img src="assets/issue1/BBCode.png" alt="image of color BBCode Effect" class="verticalimg"></p>
     <p class="smalltext">BBCode Color Effect</p>
     <section class="leftalign">
         <p>
@@ -115,7 +115,7 @@
             This was mostly added for the Star Messenger in the tutorial but I'm sure I will find some other uses for it. 
         </p>
     </section>
-    <p><img src="assets/issue1/Annoyed.png" alt="image of annoyed Star Messenger" height="300px" class="borderimg"></p>
+    <p><img src="assets/issue1/Annoyed.png" alt="image of annoyed Star Messenger" class="verticalimg"></p>
     <p class="smalltext">Annoyed Star Messenger</p>
     <section class="leftalign">
         <p>If you really want, you can make the Star Messenger shut up by interrupting it like 5 times.</p>
@@ -128,7 +128,7 @@
             You can do three attacks in the game by clicking the left mouse button rapidly. Two are punches and the last is a ranged star attack. The star attack used to shoot farther based on how fast you were moving when you clicked but I changed that.
         </p>
     </section>
-    <p><img src="assets/issue1/starcharge.gif" alt="GIF of Charging the star attack" width="500px" class="borderimg"></p>
+    <p><img src="assets/issue1/starcharge.gif" alt="GIF of Charging the star attack" class="borderimg"></p>
     <p class="smalltext">Charging the star attack</p>
     <section class="leftalign">
         <p>Now after two clicks, if you hold the left mouse button you can charge up the star attack.</p>
