--- a/wizardfella/whatis.html
+++ b/wizardfella/whatis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is Wizard Fella?</title>
-    <link rel="stylesheet" href="style.css?v=1.1">
+    <link rel="stylesheet" href="style.css?v=1.2">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/star.png">
 
     <meta content="What is Wizard Fella?" property="og:title">
@@ -30,7 +30,7 @@
         </p>
     </section>
     
-    <h1 class="rotatedText2">WIZARD FELLA : ISLANDS</h1>
+    <h1 class="rotatedText2">WIZARD FELLA ISLANDS</h1>
     <section class="leftalign">
         <p>In 2025 I decided to come back to Wizard Fella, this time from a slightly different angle. Wizard Fella Islands is a different take on the original idea for Wizard Fella but it's still all about doing a lot of cool moves and saving the world.</p>
     </section>
